<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/toolbar_main_text_size"
            android:textStyle="bold"
            android:text="@string/toolbar_main_title" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/main_setting_screen_marginTop"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/main_setting_marginHorizontal"
            android:gravity="center"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/main_setting_description_text_size"
            android:text="@string/main_setting_description_text" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/main_setting_cardview_marginVertical"
            android:layout_marginHorizontal="@dimen/main_setting_marginHorizontal"
            app:cardElevation="@dimen/cardview_elevation"
            app:cardCornerRadius="@dimen/cardview_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/cardview_content_layout_padding"
                android:layout_marginHorizontal="@dimen/main_setting_tile_marginHorizontal"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Design.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEventId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size"
                        android:hint="@string/event_id" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Design.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEventAppId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size"
                        android:hint="@string/event_app_id" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Design.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etQRAppId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textSize="@dimen/et_text_size"
                        android:hint="@string/qr_app_id" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Design.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etServerAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:textSize="@dimen/et_text_size"
                        android:hint="@string/socket_io_server_address" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSetAndStart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_setting_btn_marginTop"
                    android:paddingVertical="@dimen/btn_paddingVertical"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size"
                    android:text="@string/setting_and_start" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>